--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
 }
 
 .hero {
@@ -24,5 +23,6 @@ body {
 @media only screen and (max-width: 600px) {
   .hero {
     font-size: 7rem;
+    padding: 0 1rem;
   }
 }
